# shall

./: .gitignore  CMakeLists.txt  FILES.md  README.md  config.h.in  darray.c  darray.h  doc.h  doxygen.conf  doxygen.conf.in  formatter.h  hashtable.c  hashtable.h  keywords.h  lexer-private.c  lexer-private.h  lexer.h  nearest_power.h  option.h  optparse.c  optparse.h  shall.c  shall.h  shall.h.in  themes.h  tokens.h  types.h  utils.c  utils.h  vernum.h.in  xtring.c  xtring.h
UT/lexers/pgsql/: uppercase_option.ssc
UT/lexers/php/: leak_in_lexerdata.ssc  start_inline.ssc  use_const.ssc  use_function.ssc  xml_and_short_open_tag.ssc  xml_and_short_tags.ssc
UT/lexers/varnish/: version_auto_4.ssc  version_forced_4.ssc  version_implicit_3.ssc
UT/shebang/: unknown_fallback_guess.ssc
UT/unicode/sequences/: json.ssc  json_surrogate_inverted.ssc  json_surrogate_split.ssc
UT/unicode/sequences/json/: surrogate_head_alone.ssc  surrogate_head_followed_by_non_surrogate.ssc  surrogate_trail_alone.ssc  surrogate_valid.ssc
UT/unicode/sequences/php/: long.ssc  short.ssc  surrogate_head_alone.ssc  surrogate_head_followed_by_non_surrogate.ssc  surrogate_inverted.ssc  surrogate_split.ssc  surrogate_trail_alone.ssc  surrogate_valid.ssc
bindings/php/: README.md  common.h  config.m4  const.php  formatter_class.c  formatter_class.h  formatter_methods.c  formatter_methods.h  helpers.c  helpers.h  lexer_class.c  lexer_class.h  lexer_methods.c  lexer_methods.h  options.c  options.h  php_shall.c  php_shall.h  test.php
bindings/python/: common.h  formatter_class.c  formatter_class.h  formatter_methods.c  formatter_methods.h  helpers.c  helpers.h  lexer_class.c  lexer_class.h  lexer_methods.c  lexer_methods.h  options.c  options.h  setup.py  shallmodule.c
bindings/ruby/: README.md  Rakefile  shall.gemspec  test.rb
bindings/ruby/doc/: shall.rb
bindings/ruby/ext/shall/: extconf.rb  ruby_color.c  ruby_color.h  ruby_formatter.c  ruby_formatter.h  ruby_helpers.c  ruby_lexer.c  ruby_lexer.h  ruby_shall.c  ruby_shall.h  ruby_style.c  ruby_style.h  ruby_theme.c  ruby_theme.h  shall.c
bindings/ruby/lib/: shall.rb
bindings/ruby/lib/shall/: version.rb
cli/: shall.c
cli/shared/: lexer_group.c  lexer_group.h  optparse.c  optparse.h
formatters/: README.md  html.c  plain.c  terminal.c
include/: bool.h  encoding.h  formatter.h  iterator.h  keywords.h  machine.h  options.h  shall.h  themes.h  tokens.h  types.h  version.h  xtring.h
lexers/: README.md  apache.re  c.re  cmake.re  css.re  diff.c  dtd.re  json.re  nginx.re  pgsql.re  php.re  ruby.re  text.c  varnish.re  xml.re
lib/: darray.c  darray.h  dlist.c  dlist.h  encoding.c  formatter.c  highlight.c  iterator.c  lexer.c  lexer.h  options.c  options.h  shall.c  themes.c  tokens.c  version.c
lib/formatters/: README.md  bbcode.c  html.c  plain.c  rtf.c  string_builder.h  terminal.c  xml.c
lib/lexers/: README.md  annotations.c  apache.re  bash.re  c.re  cmake.re  cpp.c  css.re  diff.c  dtd.re  elixir.re  go.re  helpers.c  js.re  json.re  lua.re  mysql.re  nginx.re  pgsql.re  php.re  php.y  python.re  ruby.re  text.c  twig.re  varnish.re  xml.re
lib/themes/: molokai.c  monokai.c
shared/: cpp.h  hashtable.c  hashtable.h  nearest_power.h  utils.c  utils.h  xtring.c
